# pico-playground

./: pico_extras_import.cmake
apps/usb_sound_card/: CMakeLists.txt  usb_sound_card.c
prebuilt/: usb_sound_card_fm_transmitter.uf2
